<resources>
    <string name="app_name">WeChore</string>

    <string name="image_contentDescription">image</string>
    <string name="let_s_get_started_text">Let\'s Get Started</string>
    <string name="intro_text_description">Organize Together</string>
    <string name="sign_in">SIGN IN</string>
    <string name="sign_up">SIGN UP</string>

    <string name="sign_up_description_text">Enter your name, email id, and password to register with us.</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="sign_in_description_text">Enter your name, email id, and password to sign in</string>

    <string name="please_click_back_again_to_exit">Please click back again to exit.</string>
    <string name="please_wait">Please Wait&#8230;</string>

    <string name="nav_my_profile">My Profile</string>
    <string name="nav_sign_out">Sign Out</string>

    <string name="mobile">Mobile</string>
    <string name="update">UPDATE</string>
    <string name="my_profile_title">My Profile</string>
    <string name="nav_my_home">My Home</string>

    <string name="create_household_title">Add Home</string>
    <string name="add">Add</string>
    <string name="house_name">Residency Name</string>

    <string name="no_houses_are_available">There are no households available</string>

    <string name="action_add_list">Add List</string>
    <string name="hint_list_name">List Name</string>
    <string name="action_add_card">Add Card</string>
    <string name="hint_card_name">Card Name</string>
    <string name="hint_description">Description:</string>
    <string name="add_list">Add List</string>

    <string name="members">Members</string>
    <string name="add_member">Add Member</string>
    <string name="cancel">Cancel</string>
    <string name="search_member">Add Member</string>

    <string name="label_color">Label Color</string>
    <string name="select_color">Select Color</string>
    <string name="select_members">Select Members</string>

    <string name="due_date">Due Date</string>
    <string name="select_due_date">Select Due Date</string>
    <string name="delete_card">Delete Card</string>

    <string name="alert">Alert</string>
    <string name="confirmation_message_to_delete_card">Are you sure you want to delete card \'%1$s\'?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="str_select_member">Select Member</string>
    <string name="default_notification_channel_id">projectS_notification_channel_id</string>
</resources>